# EvacuationPy

./: .editorconfig  .gitignore  .pre-commit-config.yaml  BimComplexity.py  BimDataModel.py  BimEvac.py  BimTools.py  BimTools_test.py  README.md  main.py  main_test.py  pyproject.toml
.github/workflows/: tests.yml
resources/: building_example.json  example-one-exit.json  example-two-exits.json  one_zone_one_exit.json  three_zones_three_transits.json  two_levels.json  udsu_block_2.json  udsu_block_3.json  udsu_block_4.json  udsu_block_5.json  udsu_block_7.json
