[project]
name = 'EvacuationPy'
version = '0.0.1'
description = 'Evacuation modeling'
readme = 'README.md'
requires-python = '>=3.11'

dependencies = [
	'scipy == 1.10.1',
	'matplotlib == 3.7.1',
	'tripy == 1.0.0',
	'ruff == 0.0.272',
	'pytest == 7.3.2',
	'autopep8 == 2.0.2',
	'mypy == 1.3.0',
	'pyright == 1.1.314',
	'black[d] == 23.3.0',
	'pre-commit == 3.3.3'
]

[tool.ruff]
target-version = 'py311'
ignore = ['E501']

[tool.black]
target-version = ['py311']
line-length = 120

[tool.mypy]
files = '**/*.py'
strict = true
ignore_missing_imports = true

[tool.pyright]
strict = ['**/*.py']
