[project]
name = 'EvacuationPy'
version = '0.0.1'
description = 'Evacuation modeling'
readme = 'README.md'
requires-python = '>=3.8'

dependencies = ['scipy == 1.10.1', 'tripy == 1.0.0']

[project.optional-dependencies]
all = [
	'matplotlib == 3.7.1',
	'ruff == 0.0.272',
	'pytest == 7.3.2',
	'pyright == 1.1.315',
	'black[d] == 23.3.0',
	'pre-commit == 3.3.3',
]

[tool.ruff]
target-version = 'py38'
ignore = ['E501']

[tool.black]
target-version = ['py38']
line-length = 120

[tool.mypy]
files = '**/*.py'
strict = true
ignore_missing_imports = true

[tool.pyright]
pythonVersion = "3.8"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportCallInDefaultInitializer = true
# reportImplicitOverride = true
reportImplicitStringConcatenation = true
reportImportCycles = true
# reportMissingSuperCall = true
reportPropertyTypeMismatch = true
reportShadowedImports = true
# reportUninitializedInstanceVariable = true
# reportUnnecessaryTypeIgnoreComment = true
# reportUnusedCallResult = true
